--- a/src/Components/css/Picker.css
+++ b/src/Components/css/Picker.css
@@ -28,7 +28,7 @@
 .Select-arrow-zone{
     width: 40px;
     height: 30px;
-    background: url(../assets/arrow2.png);
+    background: url(../assets/arrow.png);
     background-size: cover;
     background-repeat: no-repeat;
 
